# lesson-homomorphic-encryption

./: Pipfile  README.md  homomorphic_encryption_model.stub.py  paillier.py  pyproject.toml  requirements.txt
code/: homomorphic_encryption_model.py  paillier.py  paillier.stub.py
text/: EXTRA_CREDIT.md  INTRODUCTION_TO_PAILLIER.md
